added css for header

--- a/index.html
+++ b/index.html
@@ -5,27 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SDSR</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">
-        <div>
-            SDSR
+        <div class="top">
+            <div class="logo">
+                SDSR
+            </div>
+    
+            <ul class="list-header">
+                <li>Home</li>
+                <li>About Me</li>
+                <li>Contact</li>
+            </ul>
         </div>
-
-        <ul>
-            <li>Home</li>
-            <li>About Me</li>
-            <li>Contact</li>
-        </ul>
         <div class="header-1">
-            <div>
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes under the main tile. 
-                    It's smaller font than and color is a lower contrast.</p>
+            <div class="head-div">
+                <h1>This website is <br>awesome</h1>
+                <p class="small-text">This website has some subtext that goes under the <br>main tile. 
+                    It's smaller font than and color is a lower <br>contrast.</p>
                 <button>Sign Up</button>
             </div>
             <div class="head-img">
-                <img src="images/canon.jpg" alt="Canon AE-1" style="width: 200px; height: 200px;">
+                <img src="images/canon.jpg" alt="Canon AE-1" style="width: 400px; height: 250px;">
             </div>
         </div>
     </div>
@@ -43,7 +46,7 @@
             space, or maybe people woll actually read it. Who knows? All I know is that it looks nice.
         </p>
         <div class="author">
-            <p>-Thor, God of Thunder</p>
+            <strong>-Thor, God of Thunder</strong>
         </div>
     </div>
 
