stlyed second half of the page and added four images to page

--- a/index.html
+++ b/index.html
@@ -32,13 +32,26 @@
             </div>
         </div>
     </div>
-    <div class="random info">
-        <div>Some random information.</div>
+
+    <div class="random-info">
+        <div class="rand">Some random information.</div>
         <ul class="img-boxes">
-            <div> <p>Some subtext for the image.</p> </div>
-            <div> <p>Some subtext for the image.</p> </div>
-            <div> <p>Some subtext for the image.</p> </div>
-            <div> <p>Some subtext for the image.</p> </div>
+            <div>
+                <img src="images/in-n-out.jpg" alt="In n Out bag" style="width: 100px; height: 100px;">
+                <p>Some subtext for <br>the image.</p> 
+            </div>
+            <div> 
+                <img src="images/flower.jpg" alt="Flower in the mountaines" style="width: 100px; height: 100px;">
+                <p>Some subtext for <br>the image.</p> 
+            </div>
+            <div>
+                <img src="images/dead-heart.jpg" alt="Skeleton Hands" style="width: 100px; height: 100px;"> 
+                <p>Some subtext for <br>the image.</p> 
+            </div>
+            <div>
+                <img src="images/crocs.jpg" alt="Crocs vs the World" style="width: 100px; height: 100px;">
+                <p>Some subtext for <br>the image.</p> 
+            </div>
         </ul>
     </div>
     <div class="quote-sec">
