styled quote section

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         </ul>
     </div>
     <div class="quote-sec">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up
-            space, or maybe people woll actually read it. Who knows? All I know is that it looks nice.
+        <p>This is an inspiring quote, or a testimonial from a <br>customer. Maybe it's just filling up
+            space, or maybe <br>people woll actually read it. Who knows? All I know <br>is that it looks nice.
         </p>
         <div class="author">
             <strong>-Thor, God of Thunder</strong>
