finished call to action portion and copyright section

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     <footer>
         <div class="footer-box">
             <div class="call-to-action">
-                <p>Call to action! It's time!</p>
-                <p>Sign up for our product by clicking that button right over there!</p>
+                <p class="call">Call to action! It's time!</p>
+                <p class="text">Sign up for our product by clicking that button right over there!</p>
             </div>
             <div class="sign-up-btn">
                 <button>Sign up</button>
